--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,3 @@
 {
-  "recommendations": [
-    "vue.volar",
-    "bradlc.vscode-tailwindcss",
-    "dbaeumer.vscode-eslint",
-    "vuetifyjs.vuetify-vscode"
-  ]
+  "recommendations": ["vue.volar", "bradlc.vscode-tailwindcss", "dbaeumer.vscode-eslint"]
 }
