--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   },
   "dependencies": {
     "@nuxt/icon": "^2.0.0",
+    "@nuxt/ui": "^3.3.4",
     "@nuxtjs/google-fonts": "^3.2.0",
-    "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.2",
     "mongodb": "^6.19.0",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/vite": "^4.1.13",
     "nuxt": "^4.0.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1",
-    "vuetify-nuxt-module": "^0.18.7"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.9.0",
